<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.DespesasActivity">

    <LinearLayout
        android:id="@+id/linerLayout_valor"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:background="@color/colorPrimaryDespesas"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/edit_valor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/trasnparente"
            android:ems="10"
            android:hint="R$ 00,00"
            android:inputType="text"
            android:textAlignment="textEnd"
            android:textColor="@color/white"
            android:textSize="34sp"/>
    </LinearLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edit_data_desp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        app:boxBackgroundColor="@color/trasnparente"
        app:layout_constraintBottom_toTopOf="@+id/edit_categoria_desp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linerLayout_valor"
        app:layout_constraintVertical_bias="0.16000003"
        app:layout_constraintVertical_chainStyle="packed">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txt_data"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/ex_data"
            android:textSize="20sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edit_categoria_desp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:boxBackgroundColor="@color/trasnparente"
        app:layout_constraintVertical_bias="0.16000003"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintTop_toBottomOf="@+id/edit_data_desp"
        app:layout_constraintBottom_toTopOf="@+id/edit_descricao_desp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txt_categoria"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/ex_categoria"
            android:textSize="20sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edit_descricao_desp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:boxBackgroundColor="@color/trasnparente"
        app:layout_constraintVertical_bias="0.16000003"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintTop_toBottomOf="@+id/edit_categoria_desp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txt_descricao"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/ex_descricao"
            android:textSize="20sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_salvar_desp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:clickable="true"
        android:contentDescription="@string/float_button_desc"
        android:src="@drawable/ic_confirma_branco"
        app:tint="@color/white"
        app:backgroundTint="@color/colorAccentDespesas"
        app:backgroundTintMode="src_atop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_descricao_desp"
        app:layout_constraintVertical_bias="1.0" />

</androidx.constraintlayout.widget.ConstraintLayout>